--- a/contactme.html
+++ b/contactme.html
@@ -42,7 +42,7 @@
 
 
 
-		  <form id="contact-form" method="get" action="contactme.php" enctype="text/plain">
+		  <form id="contact-form" method="post" action="contactme.php" enctype="text/plain">
 
 		  <label for="name">Nom</label>
 		  <input name="name" type="text"  placeholder="votre nom" required>
