--- a/portfolio-sketchbook.html
+++ b/portfolio-sketchbook.html
@@ -43,7 +43,7 @@
 			  	<a href="Images/sketchbook/12.JPG" data-lightbox="mygallery"><img class="contenu_galerie" src="Images/sketchbook/12_c.png"></a>
 			  	<a href="Images/sketchbook/13.JPG" data-lightbox="mygallery"><img class="contenu_galerie" src="Images/sketchbook/13_c.png"></a>
 			  	<a href="Images/sketchbook/14.JPG" data-lightbox="mygallery"><img class="contenu_galerie" src="Images/sketchbook/14_c.png"></a>
-			  	<a href="Images/sketchbook/16_c.JPG" data-lightbox="mygallery"><img class="contenu_galerie" src="Images/sketchbook/16_c.png"></a>
+			  	<a href="Images/sketchbook/16(0).JPG" data-lightbox="mygallery"><img class="contenu_galerie" src="Images/sketchbook/16_c.png"></a>
 			  	<a href="Images/sketchbook/17.JPG" data-lightbox="mygallery"><img class="contenu_galerie" src="Images/sketchbook/17_c.png"></a>
 			  	<a href="Images/sketchbook/18.JPG" data-lightbox="mygallery"><img class="contenu_galerie" src="Images/sketchbook/18_c.png"></a>
 			  	<a href="Images/sketchbook/19.JPG" data-lightbox="mygallery"><img class="contenu_galerie" src="Images/sketchbook/19_c.png"></a>
