--- a/contactme.html
+++ b/contactme.html
@@ -41,7 +41,7 @@
 		  </form>-->
 
 
-
+		  <!--//good one
 		  <form id="contact-form" method="post" action="contactme.php" enctype="text/plain">
 
 		  <label for="name">Nom</label>
@@ -56,7 +56,9 @@
 		  <label for="message">Message</label>
 		  <textarea name="message"  placeholder="écrivez quelque chose..." style="height:200px" required></textarea>
 
-		  <input type="submit" class="form-control submit" value="Envoyer">
+		  <input type="submit" class="form-control submit" value="Envoyer">-->
+
+		  <p>e-mail : koummarasy.sandy@gmail.com</p>
 
 
 		</div>
