--- a/apropos.html
+++ b/apropos.html
@@ -23,7 +23,7 @@
 
 
 	<section class="conteneur">
-		<img class="portrait" src="Images/apropos/photo2.NEF">
+		<img class="portrait" src="Images/apropos/photo.jpg">
 		<p class="texte_apropos">
 		Depuis toute petite, ma passion est basée sur la culture japonaise. Ainsi, mes dessins et mes illustrations se rapprochent souvent de cet univers du mangas. J’ai d’abord commencé avec des techniques simples tels que des dessins sur feuille et aux crayons, puis, mon domaine s’est développé à travers plusieurs outils dont l’aquarelle, les feutres à alcool ou encore la peinture. Je me suis ensuite plus penchée sur des illustrations numériques à la tablette graphique qui est un domaine que j’apprécie beaucoup aussi. 
 		<br><br>
