--- a/projetscolaire_fanzine.html
+++ b/projetscolaire_fanzine.html
@@ -27,7 +27,7 @@
 			<div class ="contenu">
 				<img class="img_principale" src="Images/galerie/projets_scolaire/evman/fanzine/fanzine_p.jpg">
 
-				<p class="legende">Illustrations réalisées dans le cadre du projet FANZINE sur le thème de la prostitution en troisième année d'EVMAN.</p>
+				<p class="legende">Visuels réalisées sur le thème de la prostitution dans le cadre d’un projet de deuxième année d’EVMAN : Fanzine.</p>
 			</div>
 
 			<div class="contenu_secondaire">
